feat: add content and comments explaining the component structure and how values from the 'trending' route are accessible from the model and passed as properties to componenets and subcomponents.

--- a/app/components/gif-container.hbs
+++ b/app/components/gif-container.hbs
@@ -1,1 +1,5 @@
-{{yield}}
+<div>
+  {{!-- In 'gif-container' component I have passed in the 'image' and 'title' props from the parent component and are passing them into the 'Image' and 'Title' subcomponents as properties so they are accessible. --}}
+  <GifContainer::Image @src={{@image}} />
+  <GifContainer::Title @title={{@title}} />
+</div>
