--- a/app/components/gif-container/image.hbs
+++ b/app/components/gif-container/image.hbs
@@ -1,1 +1,4 @@
-{{yield}}
+<div>
+  {{!-- I placed the property for 'src' to be displayed in the 'img' tag below --}}
+  <img src={{@src}} alt=".gif">
+</div>
