--- a/app/components/gif-container/title.hbs
+++ b/app/components/gif-container/title.hbs
@@ -1,1 +1,4 @@
-{{yield}}
+<div>
+  {{!-- I placed the property for 'title' to be displayed in the 'h4' tag below --}}
+  <h4>{{@title}}</h4>
+</div>
