--- a/app/components/grid-container.hbs
+++ b/app/components/grid-container.hbs
@@ -1,1 +1,4 @@
-{{yield}}
+{{!-- Using generic bootstrap styling for a main container for the 'grid-container' component. --}}
+<main class="container mt5">
+  {{yield}}
+</main>
