feat: create '_gif.css', '_grid.css' and import both files into 'app.css'. The two files will create a css grid and display gifs in a grid format as well as implement media queries for different screen sizes.

--- a/app/components/gif-container.hbs
+++ b/app/components/gif-container.hbs
@@ -1,5 +1,5 @@
-<div>
+<div class="grid-item">
   {{!-- In 'gif-container' component I have passed in the 'image' and 'title' props from the parent component and are passing them into the 'Image' and 'Title' subcomponents as properties so they are accessible. --}}
   <GifContainer::Image @src={{@image}} />
-  <GifContainer::Title @title={{@title}} />
+  {{!-- <GifContainer::Title @title={{@title}} /> --}}
 </div>
