--- a/app/components/gif-container/image.hbs
+++ b/app/components/gif-container/image.hbs
@@ -1,4 +1,4 @@
-<div>
+<div class="image-container">
   {{!-- I placed the property for 'src' to be displayed in the 'img' tag below --}}
-  <img src={{@src}} alt=".gif">
+  <img class="gif-image" src={{@src}} alt=".gif">
 </div>
