--- a/app/components/grid-container.hbs
+++ b/app/components/grid-container.hbs
@@ -1,4 +1,4 @@
 {{!-- Using generic bootstrap styling for a main container for the 'grid-container' component. --}}
-<main class="container mt5">
+<main class="grid-container">
   {{yield}}
 </main>
