--- a/app/components/gif-container/title.hbs
+++ b/app/components/gif-container/title.hbs
@@ -1,4 +1,4 @@
-<div>
+<div class="title-container">
   {{!-- I placed the property for 'title' to be displayed in the 'h4' tag below --}}
-  <h4>{{@title}}</h4>
+  <h4 class="gif-title">{{@title}}</h4>
 </div>
