feat: add a hover effect to each gif and minor styling changes.

--- a/app/components/gif-container/image.hbs
+++ b/app/components/gif-container/image.hbs
@@ -1,4 +1,5 @@
 <div class="image-container">
   {{!-- I placed the property for 'src' to be displayed in the 'img' tag below --}}
   <img class="gif-image" src={{@src}} alt=".gif">
+  <textarea>{{@src}}</textarea>
 </div>
