--- a/app/components/navbar.hbs
+++ b/app/components/navbar.hbs
@@ -1,3 +1,8 @@
-<navbar class="container mt-5">
-  I am a navbar
+<navbar class="navbar">
+  <div class="navbar-title-container">
+    <img class="navbar-image" src="/assets/giphy-logo.svg">
+  <p class="navbar-title">
+    GIPHY<span>_office</span>
+  </p>
+  </div>
 </navbar>
