--- a/app/styles/_grid.css
+++ b/app/styles/_grid.css
@@ -13,7 +13,9 @@
   flex-direction: column;
   transition: transform .2s;
   margin: 0 auto;
-  border: 1px solid black;
+  border: 1px solid rgb(58, 56, 56);
+  border-radius: 10px;
+  background-color: rgb(143, 133, 133);
 }
 
 @media (min-width: 768px) {
