--- a/app/components/navbar.hbs
+++ b/app/components/navbar.hbs
@@ -5,4 +5,8 @@
     GIPHY<span>_office</span>
   </p>
   </div>
+  <div>
+    <i class="fa fa-search"></i>
+    <input class="search-input" type="text">
+  </div>
 </navbar>
