--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,6 +1,7 @@
 @import './_grid.css';
 @import './_gif.css';
 @import './_navbar.css';
+@import './_not-found.css';
 
 body {
   background-color: rgb(36, 35, 35);
