feat: create a controller for the trending template and establish a tracked property and action method. Implemented the values to be passed to the template and used in an event listener.

--- a/app/templates/trending.hbs
+++ b/app/templates/trending.hbs
@@ -1,5 +1,7 @@
 {{page-title "Trending GIFS"}}
 {{!-- place GridContainer component into trending template and utilize an 'each' helper to loop through all of the returned gifs from the model created in the 'trending' route.  --}}
+<Input type="text" @value={{this.trendingInput}}/>
+<button type="submit" {{on "click" (fn this.readTrendingInput this.trendingInput this.model)}}>submit</button>
 <GridContainer>
   {{#each this.model as |gif|}}
     <GifContainer 
